--- a/i18n/en-CA.properties
+++ b/i18n/en-CA.properties
@@ -381,7 +381,7 @@ be.taskDeletePrompt = Are you sure you want to permanently delete this task?
 # Due date for a task
 be.taskDueDate = Due
 # Error message when a task edit fails
-be.taskEditErrorMessage = There was an error updating this task.
+be.taskEditErrorMessage = An error occurred while modifying this task. Please try again.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modify task
 # Reject option for a task
