--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Something went wrong when saving the
 be.folderState = There are no items in this folder.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Get version information
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = In
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Topics
 be.keywordsAppliedList = Keywords were applied
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Keywords: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Please wait while the items load...
 # Placeholder for a logo.
